--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,10 @@ jobs:
     steps:
       - run: |
             echo "First GitHub Action"
-            apt-get install build-essential procps curl file git wget
+            pwd
+            ls -lha
+            whoami
+            sudo apt-get install build-essential procps curl file git wget
             /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
             test -d ~/.linuxbrew && eval "$(~/.linuxbrew/bin/brew shellenv)"
             test -d /home/linuxbrew/.linuxbrew && eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
