--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
               pwd
               ls -lha
               whoami
-              sudo apt-get install build-essential procps curl file git wget xargs
+              sudo apt-get install build-essential procps curl file git wget findutils
               /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
               test -d ~/.linuxbrew && eval "$(~/.linuxbrew/bin/brew shellenv)"
               test -d /home/linuxbrew/.linuxbrew && eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
