--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,22 +1,24 @@
 name: "Test local environment setup"
 run-name: ${{ github.actor }} is learning GitHub Actions
-
 on: workflow_dispatch
 
 jobs:
   test:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-22.04
     steps:
-      - run: |
-              echo "First GitHub Action"
-              pwd
-              ls -lha
-              whoami
-              sudo apt-get install build-essential procps curl file git wget findutils
-              /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-              test -d ~/.linuxbrew && eval "$(~/.linuxbrew/bin/brew shellenv)"
-              test -d /home/linuxbrew/.linuxbrew && eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
-              echo "eval \"\$($(brew --prefix)/bin/brew shellenv)\"" >> ~/.bashrc
-              cat ~/.bashrc
-              xargs brew install < brew_installed.txt
-
+      - uses: actions/checkout@v3
+      - name: Set up environment and run tests
+        run: |
+          echo "First GitHub Action"
+          pwd
+          ls -lha
+          whoami
+          sudo apt-get update
+          sudo apt-get install -y build-essential procps curl file git wget findutils
+          /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+          test -d ~/.linuxbrew && eval "$(~/.linuxbrew/bin/brew shellenv)"
+          test -d /home/linuxbrew/.linuxbrew && eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
+          echo "eval \"\$($(brew --prefix)/bin/brew shellenv)\"" >> ~/.bashrc
+          cat ~/.bashrc
+          brew install $(cat brew_installed.txt)
+        shell: bash
