add display related changes.. increase timeouts

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -82,4 +82,13 @@ set -g message-style 'fg=yellow bg=red bold'
 # Set mem cpu load on status bar
 # https://github.com/thewtex/tmux-mem-cpu-load
 set-option -g status on
-set-option -g status-interval 2
+set-option -g status-interval 5
+
+# Super useful when using "grouped sessions" and multi-monitor setup
+setw -g aggressive-resize on
+
+# Focus events enabled for terminals that support them
+set -g focus-events on
+
+# Increase tmux messages display duration from 750ms to 4s
+set -g display-time 4000
