--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,9 @@
-# vim: set ft=tmux:
+# vi: set ft=tmux:
 ### Increase history in scrolling
 set-option -g history-limit 10000
+
+# Easy config reload
+bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 
 ### kube-tmux https://github.com/jonmosco/kube-tmux
 set -g status-right "#(/bin/bash $HOME/.tmux/kube-tmux/kube.tmux 250 red cyan)"
@@ -47,14 +50,14 @@ set -g bell-action none
 setw -g clock-mode-colour yellow
 
 # copy mode
-setw -g mode-style 'fg=black bg=red bold'
+setw -g mode-style 'fg=black bg=cyan bold'
 
 # panes
-set -g pane-border-style 'fg=red'
-set -g pane-active-border-style 'fg=yellow'
+set -g pane-border-style 'fg=red bold'
+set -g pane-active-border-style 'fg=yellow bold'
 
 # statusbar
-set -g status-position bottom
+set -g status-position top
 set -g status-justify left
 set -g status-style 'fg=red'
 
@@ -65,7 +68,19 @@ set -g status-right-style 'fg=black bg=yellow'
 set -g status-right '%Y-%m-%d %H:%M '
 set -g status-right-length 75
 
-setw -g window-status-current-style 'fg=black bg=red'
+# start with window 1 (instead of 0)
+set -g base-index 1
+
+# open new windows in the current path
+bind c new-window -c "#{pane_current_path}"
+
+# shorten command delay
+set -sg escape-time 1
+
+# start with pane 1
+set -g pane-base-index 1
+
+setw -g window-status-current-style 'fg=white bold bg=red'
 setw -g window-status-current-format ' #I #W #F '
 
 setw -g window-status-style 'fg=red bg=black'
@@ -79,6 +94,11 @@ set -g message-style 'fg=yellow bg=red bold'
 
 # Fix possible vim colour issie
 #set -g default-terminal "screen-256color"
+
+# set default terminal mode to 256 colors
+set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
+
 # Set mem cpu load on status bar
 # https://github.com/thewtex/tmux-mem-cpu-load
 set-option -g status on
@@ -92,3 +112,30 @@ set -g focus-events on
 
 # Increase tmux messages display duration from 750ms to 4s
 set -g display-time 4000
+
+# Kill pane with no confirm
+#  bind-key x kill-pane
+
+# Address vim mode switching delay (http://superuser.com/a/252717/65504)
+set -s escape-time 0
+
+# Use vi keybindings
+setw -g mode-keys vi
+unbind -T copy-mode-vi Enter
+
+# Pimp copy and paste of tmux
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -selection c"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+
+# Easier and faster switching between next/prev window
+bind C-p previous-window
+bind C-n next-window
+
+# present a menu of URLs to open from the visible pane. sweet.
+bind u capture-pane \;\
+    save-buffer /tmp/tmux-buffer \;\
+    split-window -l 10 "urlview /tmp/tmux-buffer"
+
+set -Fg 'status-format[1]' '#{status-format[0]}'
+set -g 'status-format[0]' ''
+set -g status 2
