changed diff behavior and rm of white spaces at end of commits

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,6 +1,10 @@
+[init]
+  defaultBranch = main
 [core]
+  autocrlf = input
   editor = vim
   pager = delta
+  whitespace = trailing-space
 [interactive]
   diffFilter = delta --color-only
 [http]
@@ -8,7 +12,11 @@
 [alias]
   logg = log --oneline --all --decorate --graph
 [delta]
+  minus-style = dim
   navigate = true    # use n and N to move between diff sections
+  plus-style = green
+  syntax-highlight = true
+sections
   line-numbers = true
 # delta detects terminal colors automatically; set one of these to disable auto-detection
 # dark = true
@@ -16,4 +24,4 @@
 [merge]
   conflictstyle = diff3
 [diff]
-  colorMoved = default
+  colorMoved = delta
