--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,8 @@
+# remap prefix from 'C-b' to 'C-a'
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
+
 # vi: set ft=tmux:
 ### Increase history in scrolling
 set-option -g history-limit 10000
@@ -18,11 +23,6 @@ bind | split-window -h
 bind - split-window -v
 unbind '"'
 unbind %
-
-# remap prefix from 'C-b' to 'C-a'
-#unbind C-b
-#set-option -g prefix C-a
-#bind-key C-a send-prefix
 
 # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.tmux.conf
